--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@capacitor/cli": "^5.3.0",
     "@capacitor/core": "^5.3.0",
     "@capacitor/filesystem": "^5.1.3",
+    "@capacitor/geolocation": "^5.0.6",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.6",
