--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@capacitor/android": "^5.3.0",
     "@capacitor/cli": "^5.3.0",
     "@capacitor/core": "^5.3.0",
     "@capacitor/filesystem": "^5.1.3",
